css/sections/header.css
.header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background-color: white;
    z-index: 1000;
    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
}

.header__nav {
    display: flex;
    overflow: hidden;
    flex-direction: column;
}

.header__logo {
    display: flex;
    align-items: center;
    padding: 0px 20px 0 6px;
    justify-content: space-between;
}

.header__logo img {
    width: 211px;
    height: 70px;
}

.header__menu {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    gap: 30px;
    padding: 5px 25px 10px;
    list-style: none;
    border-bottom: 1px solid rgb(196, 191, 191);
}

.header__menu li {
    font-family: var(--plus-jakarta-sans);
}

.header__menu li:last-child {
    margin-left: auto;
}

.header__menu li a {
    text-decoration: none;
    color: black;
    font-weight: 400;
}

.header__menu li a:hover,
a.active {
    color: var(--secondary-color);
    transition: 0.2s ease;
}

.header__menu button {
    background-color: var(--secondary-color);
    color: rgb(255, 255, 255);
    border: none;
    outline: none;
    padding: 10px 20px;
    border-radius: 5px;
    font-size: 15px;
    align-content: end;
}

.header__menu button:hover {
    cursor: pointer;
}

.hamburger {
    display: none;
    width: 20px;
    height: 20px;
    position: relative;
    cursor: pointer;
}

.close-icon {
    display: none;
    width: 100%;
}

.close-icon i {
    font-size: 20px;
    cursor: pointer;
    padding: 20px;
}

@media screen and (max-width:768px) {
    .header__nav {
        flex-direction: row;
        align-items: center;
        border-bottom: 1px solid rgb(196, 191, 191);
    }

    .header__menu {
        position: fixed;
        flex-direction: column;
        align-items: flex-start;
        top: -100vh;
        right: 0px;
        height: fit-content;
        width: 100%;
        background-color: white;
        transition: top 0.4s ease;
    }

    .header__menu li:last-child {
        margin-left: 0;
        margin-bottom: 20px;
    }

    .header__menu li:last-child button {
        align-self: flex-start;
    }

    .header__menu.active {
        top: 0px;
    }

    .hamburger {
        flex: 1;
        display: flex;
        justify-content: flex-end;
        align-items: center;
    }

    .hamburger i {
        padding-right: 20px;
    }

    .close-icon {
        display: flex;
        justify-content: end;
        width: 100%;
    }

    .close-icon i {
        display: block;
        margin-right: -25px;
    }

}

